@@ -1,7 +1,7 @@
 <?php
 
 /*
- * This file is part of Linfo (c) 2010-2012 Joseph Gillotti.
+ * This file is part of Linfo (c) 2010-2013 Joseph Gillotti.
  * 
  * Linfo is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
