@@ -1,0 +1,103 @@
+<?php
+
+/*
+ * This file is part of Linfo (c) 2010 Joseph Gillotti.
+ * 
+ * Linfo is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * 
+ * Linfo is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with Linfo.  If not, see <http://www.gnu.org/licenses/>.
+ * 
+*/
+
+
+defined('IN_INFO') or exit;
+
+/*
+ * Finnish translation
+ */
+
+$lang = array(
+	'header' => 'J&auml;rjestelm&auml;n kunto ja asetuksetn',
+	'core' => 'Perustiedot',
+	'os' => 'K&auml;ytt&ocirc;j&auml;rjestelm&auml;',
+	'kernel' => 'Kernel',
+	'accessed_ip' => 'IP osoite',
+	'uptime' => 'K&auml;ynniss&auml;',
+	'hostname' => 'Nimi',
+	'cpus' => 'CPUt',
+	'load' => 'Kuorma',
+	'processes' => 'Prosessit',
+	'threads' => 'S&auml;ikeit&auml;',
+	'total' => 'Yhteens&auml;',
+	'memory' => 'Muisti',
+	'type' => 'Tyyppi',
+	'free' => 'Vapaana',
+	'used' => 'K&auml;ytetty',
+	'size' => 'Koko',
+	'physical' => 'Fyysinen',
+	'swap' => 'Swap',
+	'network_devices' => 'Verkkolaitteet',
+	'device_name' => 'Laitenimi',
+	'amount_sent' => 'L&auml;hetetty',
+	'amount_received' => 'Saapunut',
+	'state' => 'Tila',
+	'temps_voltages' => 'L&auml;mp&ocirc;tila / J&auml;nnitteet',
+	'path' => 'Polku',
+	'device' => 'Laite',
+	'value' => 'Arvo',
+	'hardware' => 'Kovo',
+	'vendor' => 'Valmistaja',
+	'type' => 'Tytppi',
+	'drives' => 'Asemat',
+	'name' => 'Nimi',
+	'reads' => 'Luettu',
+	'writes' => 'Kirjoitettu',
+	'size' => 'Koko',
+	'filesystem_mounts' => 'Tietoj&auml;rjestelm&auml;t',
+	'mount_point' => 'Liitospiste',
+	'filesystem' => 'Tietoj&auml;rjestelm&auml;',
+	'used' => 'K&auml;ytetty',
+	'free' => 'Vapaana',
+	'percent_used' => 'K&auml;ytetty %',
+	'raid_arrays' => 'RAID pakat',
+	'level' => 'Taso',
+	'status' => 'Status',
+	'devices' => 'Asemat',
+	'label' => 'Label',
+	'active' => 'Aktivoitu',
+	'batteries' => 'Patterit',
+	'charge' => 'Lataus',
+	'unknown' => 'Tuntematon',
+	'footer_app' => 'Luotu: %s  aika %s sekunttia.',
+	'none_found' => 'Ei osumia',
+	'sound_cards' => '&auml;&auml;nikortit',
+	'number' => 'Numero',
+	'card' => 'Kortti',
+	'message' => 'Viesti',
+	'from_where' => 'L&auml;hde',
+	'mount_options' => 'Liitos optiot',
+	'error_head' => 'Virheet datan noudossa',
+	'timer' => 'Ajastin',
+	'area' => 'Area',
+	'time_taken' => 'Haun kesto',
+	'days' => 'p&auml;iv&auml;&auml;',
+	'minutes' => 'minuuttiat',
+	'seconds' => 'sekunttia',
+	'hours' => 'tuntia',
+	'pid' => 'PID',
+	'service' => 'Palvelu',
+	'services' => 'Palvelut',
+	'memory_usage' => 'Muistin k&auml;ytt&ocirc;',
+	'distro' => 'Jakelu',
+	'cpu_arch' => 'Arkkitektuuri',
+	'model' => 'Malli',
+);
